2004-01-19  Nick Garnett  <nickg@calivar.com>

	* ecos.db: Added FAT12/16 filesystem packages.

	* NEWS: Added line about FAT filesystem support.
	
2003-11-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* ecos.db: Added libipsec package.

2003-11-09  Gary Thomas  <gary@mlbassoc.com>

	* ecos.db: Add serial I/O package for Motorola MPC8xxx (QUICC-II)

2003-11-05  Bob Koninckx <bob.koninckx@mech.kuleuven.ac.be>

	* ecos.db: New packages - ethernet and watchdog for EC555 

2003-11-04  Andrew Lunn  <andrew.lunn@ascom.ch>

        * ecos.db: Modified the e7t to use the new 39VFXXX flash driver
	
2003-11-04  Andrew Lunn  <andrew.lunn@ascom.ch>

	* ecos.db: Replaced the 39VF4XX flash driver with a 39VFXXX driver.

2003-10-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* pkgconf/rules.mak: Remove -finit-priority and -fvtable-gc
	from all flags.

2003-10-15  Gary Thomas  <gary@mlbassoc.com>
2003-09-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* pkgconf/rules.mak Only pass C flags to the C compiler.
	Workaround for BUG #1000035.
 
2003-10-04  Savin Zlobec <savin@elatec.si>

	* ecos.db: New package - Synth wall clock device
	
2003-09-30  Gary Thomas  <gary@mlbassoc.com>

	* ecos.db: New package - National Semiconductor DP83816 PCI ethernet

2003-09-21  Jonathan Larmour  <jifl@eCosCentric.com>

	* ecos.db: Add sh4_202_md serial driver package
	(CYGPKG_IO_SERIAL_SH_SH4_202_MD)
	
2003-09-19  Gary Thomas  <gary@mlbassoc.com>

	* ecos.db: 
	New platform - TAMS MOAB (PowerPC 405GPr)
	New NAND FLASH drivers - Toshiba 58CXXX
	New RTC driver - Dallas DS1307

2003-09-05  Nick Garnett  <nickg@balti.calivar.com>

	* ecos.db: Added Packages and target for SuperH SH4-202 part and
	MicroDev CPU board.
	
2003-08-22  Chris Garry  <cgarry@sweeneydesign.co.uk>

	* ecos.db: Add new VNC server package.

2003-08-22  Gary Thomas  <gary@mind.be>

	* ecos.db: Add support for picasso - another NMI uEngine (PXA255)
	based system.

2003-08-19  Gary Thomas  <gary@mlbassoc.com>

	* ecos.db: New packages: